crates/plantuml-core/tests/snapshots/state_tests__simple_state.snap
---
source: crates/plantuml-core/tests/state_tests.rs
assertion_line: 26
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="STATE" height="282px" preserveAspectRatio="none" style="width:226px;height:282px;background:#FFFFFF;" version="1.1" viewBox="6 6 225.665 282" width="226px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="initial_initial">
<ellipse cx="104.88499999999999" cy="23" fill="#181818" rx="10" ry="10" stroke="none"/>
</g>
<g id="state_Active">
<rect fill="#F1F1F1" height="50" rx="12.5" ry="12.5" stroke="#181818" stroke-width="0.5" width="63.552" x="73.109" y="94"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="104.88499999999999" y="112.1485" textLength="43.551">
Active
</text>
<line stroke="#181818" stroke-width="0.5" x1="73.109" x2="136.661" y1="120.297" y2="120.297"/>
</g>
<g id="state_Inactive">
<rect fill="#F1F1F1" height="50" rx="12.5" ry="12.5" stroke="#181818" stroke-width="0.5" width="75.556" x="13" y="205"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="50.778" y="223.1485" textLength="55.555">
Inactive
</text>
<line stroke="#181818" stroke-width="0.5" x1="13" x2="88.556" y1="231.297" y2="231.297"/>
</g>
<g id="final_final">
<ellipse cx="186.76999999999998" cy="215" fill="#FFF" rx="10" ry="10" stroke="#181818" stroke-width="1.5"/>
<ellipse cx="186.76999999999998" cy="215" fill="#181818" rx="6" ry="6" stroke="none"/>
</g>
<g id="trans_initial_Active">
<path d="M104.88499999999999,33 L104.88499999999999,94" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="trans_Active_Inactive">
<path d="M92.1746,144 L65.8892,205" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="end" x="73.66044" y="168.4" textLength="50.66">
timeout
</text>
</g>
<g id="trans_Inactive_Active">
<path d="M88.556,230 L198.665,230 L198.665,119 L136.661,119" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="93.556" y="225" textLength="49.017">
resume
</text>
</g>
<g id="trans_Active_final">
<path d="M104.88499999999999,144 L186.76999999999998,205" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="145.63899999999998" y="168.4" textLength="33.483">
close
</text>
</g>
</g>
</svg>
