crates/plantuml-core/tests/snapshots/state_tests__state_with_choice.snap
---
source: crates/plantuml-core/tests/state_tests.rs
assertion_line: 70
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="STATE" height="360px" preserveAspectRatio="none" style="width:179px;height:360px;background:#FFFFFF;" version="1.1" viewBox="7 7 178.73200000000003 359.997" width="179px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="initial_initial">
<ellipse cx="85.36600000000001" cy="17" fill="#222" rx="10" ry="10" stroke="#222" stroke-width="1"/>
</g>
<g id="state_Valid">
<rect fill="#F1F1F1" height="50" rx="12.5" ry="12.5" stroke="#181818" stroke-width="0.5" width="54.794200000000004" x="7" y="215.297"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="34.3971" y="233.4455" textLength="34.794">
Valid
</text>
<line stroke="#181818" stroke-width="0.5" x1="7" x2="61.794200000000004" y1="241.594" y2="241.594"/>
</g>
<g id="state_Invalid">
<rect fill="#F1F1F1" height="50" rx="12.5" ry="12.5" stroke="#181818" stroke-width="0.5" width="66.93780000000001" x="96.7942" y="215.297"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="130.2631" y="233.4455" textLength="46.938">
Invalid
</text>
<line stroke="#181818" stroke-width="0.5" x1="96.7942" x2="163.73200000000003" y1="241.594" y2="241.594"/>
</g>
<g id="final_final">
<ellipse cx="85.36600000000001" cy="336.297" fill="none" rx="11" ry="11" stroke="#222" stroke-width="1"/>
<ellipse cx="85.36600000000001" cy="336.297" fill="#222" rx="6" ry="6" stroke="none"/>
</g>
<g id="trans_initial_check">
<path d="M85.36600000000001,27 L115.12410000000001,88" fill="none" stroke="#181818" stroke-width="1"/>
<polygon fill="#181818" points="115.124,88 114.773,78.157 112.932,83.506 107.583,81.665" stroke="#181818" stroke-linejoin="miter" stroke-miterlimit="10" stroke-width="1"/>
</g>
<g id="trans_check_Valid">
<path d="M115.12410000000001,108 L34.3971,215.297" fill="none" stroke="#181818" stroke-width="1"/>
<polygon fill="#181818" points="34.397,215.297 43.004,210.51 37.403,211.302 36.612,205.7" stroke="#181818" stroke-linejoin="miter" stroke-miterlimit="10" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="end" x="74.83330000000001" y="150.9188" textLength="47.369">
[valid]
</text>
</g>
<g id="trans_check_Invalid">
<path d="M115.12410000000001,108 L130.2631,215.297" fill="none" stroke="#181818" stroke-width="1"/>
<polygon fill="#181818" points="130.263,215.297 132.966,205.826 129.565,210.346 125.045,206.944" stroke="#181818" stroke-linejoin="miter" stroke-miterlimit="10" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="120.12410000000001" y="161.6485" textLength="58.518">
[invalid]
</text>
</g>
<g id="trans_Valid_final">
<path d="M34.3971,265.297 L85.36600000000001,325.297" fill="none" stroke="#181818" stroke-width="1"/>
<polygon fill="#181818" points="85.366,325.297 82.588,315.848 82.129,321.486 76.491,321.027" stroke="#181818" stroke-linejoin="miter" stroke-miterlimit="10" stroke-width="1"/>
</g>
<g id="trans_Invalid_final">
<path d="M130.2631,265.297 L85.36600000000001,325.297" fill="none" stroke="#181818" stroke-width="1"/>
<polygon fill="#181818" points="85.366,325.297 93.961,320.488 88.362,321.294 87.555,315.695" stroke="#181818" stroke-linejoin="miter" stroke-miterlimit="10" stroke-width="1"/>
</g>
<g id="choice_check">
<text fill="#000" font-family="sans-serif" font-size="16" x="105.12410000000001" y="104" textLength="7.696">
◇
</text>
</g>
</g>
</svg>
