crates/plantuml-core/tests/snapshots/state_tests__state_with_definitions.snap
---
source: crates/plantuml-core/tests/state_tests.rs
assertion_line: 50
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="STATE" height="398px" preserveAspectRatio="none" style="width:231px;height:398px;background:#FFFFFF;" version="1.1" viewBox="6 6 231 398" width="231px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="initial_initial">
<ellipse cx="108.5" cy="23" fill="#181818" rx="10" ry="10" stroke="none"/>
</g>
<g id="composite_Active">
<rect fill="#E2E2F0" height="196" rx="10" ry="10" stroke="#181818" stroke-width="1.5" width="191" x="13" y="94"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="15" font-weight="bold" text-anchor="middle" x="108.5" y="111" textLength="46.662">
Active
</text>
<line stroke="#181818" stroke-width="1" x1="13" x2="204" y1="124" y2="124"/>
</g>
<g id="Active_inner_state_Processing">
<rect fill="#F1F1F1" height="35" rx="12.5" ry="12.5" stroke="#181818" stroke-width="0.5" width="90" x="63.5" y="152"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="108.5" y="170.1485" textLength="75.312">
Processing
</text>
<line stroke="#181818" stroke-width="0.5" x1="63.5" x2="153.5" y1="178.297" y2="178.297"/>
</g>
<g id="Active_inner_state_Waiting">
<rect fill="#F1F1F1" height="35" rx="12.5" ry="12.5" stroke="#181818" stroke-width="0.5" width="90" x="63.5" y="227"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="108.5" y="245.1485" textLength="53.449">
Waiting
</text>
<line stroke="#181818" stroke-width="0.5" x1="63.5" x2="153.5" y1="253.297" y2="253.297"/>
</g>
<g id="Active_inner_trans_Processing_Waiting">
<path d="M108.5,187 L108.5,227" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="Active_inner_trans_Waiting_Processing">
<path d="M153.5,237.5 L168.5,237.5 L168.5,176.5 L153.5,176.5" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="final_final">
<ellipse cx="108.5" cy="361" fill="#FFF" rx="10" ry="10" stroke="#181818" stroke-width="1.5"/>
<ellipse cx="108.5" cy="361" fill="#181818" rx="6" ry="6" stroke="none"/>
</g>
<g id="trans_initial_Active">
<path d="M108.5,33 L108.5,94" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="trans_Active_final">
<path d="M108.5,290 L108.5,351" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
</g>
</svg>
